--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 		</div>
 		<div class="prog">
 		  <div class= "prog1">
-			<div id="text5" class="text5">чутка спиздил у димы</div>
+			<div id="text5" class="text5">спиздил у Flanyx</div>
 		  </div>
 		  <div class="prog2">
 			<div id="text5" class="text5">леха гей</div>
